--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <h1>Политика конфиденциальности</h1>
-<p><strong>Дата обновления:</strong> 2025</p>
+<p><strong>Дата обновления:</strong> 2025.11.18</p>
 
-<p>Ваше приложение («Приложение») предоставляет доступ к веб-сайту через встроенный веб-просмотр (WebView). Настоящая Политика конфиденциальности объясняет, какие данные могут собираться, как они используются и какие права есть у пользователя.</p>
+<p>Приложение BRICS FORUM 2025 предоставляет доступ к веб-сайту через встроенный веб-просмотр (WebView). Настоящая Политика конфиденциальности объясняет, какие данные могут собираться, как они используются и какие права есть у пользователя.</p>
 
 <h2>1. Сбор и использование информации</h2>
 <p>Приложение само по себе не собирает и не хранит персональные данные пользователей. Однако сайт, который встроен в приложение, может автоматически получать следующую информацию: IP-адрес, cookies, данные браузера, действия на сайте, а также данные, вводимые пользователем.</p>
@@ -37,7 +37,7 @@
 <p>Приложение не предназначено для детей младше 13 лет.</p>
 
 <h2>8. Контакты</h2>
-<p>Email: you@example.com</p>
+<p>Email: underway.dj@gmail.com</p>
 
 <h2>9. Изменения</h2>
 <p>Мы можем обновлять Политику. Продолжая использование приложения, вы соглашаетесь с обновлёнными условиями.</p>
