Update app name in privacy policy section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Политика конфиденциальности</h1>
 <p><strong>Дата обновления:</strong> 2025.11.18</p>
 
-<p>Приложение BRICS FORUM 2025 предоставляет доступ к веб-сайту через встроенный веб-просмотр (WebView). Настоящая Политика конфиденциальности объясняет, какие данные могут собираться, как они используются и какие права есть у пользователя.</p>
+<p>Приложение Companion 2025 предоставляет доступ к веб-сайту через встроенный веб-просмотр (WebView). Настоящая Политика конфиденциальности объясняет, какие данные могут собираться, как они используются и какие права есть у пользователя.</p>
 
 <h2>1. Сбор и использование информации</h2>
 <p>Приложение само по себе не собирает и не хранит персональные данные пользователей. Однако сайт, который встроен в приложение, может автоматически получать следующую информацию: IP-адрес, cookies, данные браузера, действия на сайте, а также данные, вводимые пользователем.</p>
